# bentoml-template

./: .bentoignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc.json  CONTRIBUTING.md  README.md  bentofile.yaml  download_models.py  pyproject.toml  pytest.ini  requirements.txt  service.py  train_and_save_model.py
.github/workflows/: build.yaml  deploy.yaml  pr-title.yaml  release.yaml  test.yaml
configs/: config.ini
docs/github_workflows/: build.md  deploy.md  test.md
middlewares/: log_parameters.py  request_response_handler.py  update_response_headers.py  validate_jwt.py  validation_handler.py
tests/unit/: test_download_models.py  test_formatters.py  test_request_response_handler.py  test_set_log_default_parameters.py  test_update_response_headers.py  test_validate_jwt.py  test_validation.py  test_validation_handler.py
utils/bentoml/: context.py
utils/common/: formatters.py  response.py  validations.py
utils/dynamodb/: README.md  data.json  dynamodb_client.py  example_table.py  fetch_data.py
utils/jwt/: generate_token.py
utils/monitoring/: README.md  prometheus_metrics.py
utils/structure_logging/: README.md  logger_config.py
