[project]
name = "bentoml-template"
version = "1.0.0"
requires-python = ">=3.12.3"
maintainers = [
    { name = "Nimisha G J", email = "nimisha@infraspec.dev" },
]
description = "BentoML boilerplate code for the model API deployments"

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"
